🚀 Major WaveFarer Project Enhancement: Comprehensive Error Handling & Architecture Improvements
✨ NEW FEATURES:
- 🔧 Comprehensive error handling system for both frontend and backend
- 📊 Advanced logging system with performance monitoring
- 🛡️ Security features including rate limiting and threat detection
- 🔄 Standardized API endpoints across microservices
- 📋 Complete documentation suite

🔧 BACKEND IMPROVEMENTS (Express):
- Added middleware/errorHandler.js with custom error classes
- Added middleware/logger.js with structured logging
- Implemented request validation and authentication middleware
- Added rate limiting and security monitoring
- Enhanced error responses with proper HTTP status codes
- Added comprehensive logging for all operations

🎨 FRONTEND IMPROVEMENTS (React):
- Added utils/errorHandler.js with user-friendly error handling
- Added config/api.js for centralized API management
- Implemented automatic error notifications and success messages
- Added input validation and error recovery mechanisms
- Enhanced user experience with proper error feedback

📚 DOCUMENTATION:
- Added ERROR_HANDLING.md with comprehensive error handling guide
- Added API_ENDPOINTS.md with standardized API documentation
- Added ARCHITECTURE.md with microservices architecture details
- Added CODE_STRUCTURE.md with code organization guidelines
- Updated README.md with project overview and setup instructions

🔧 INFRASTRUCTURE:
- Added requirements.txt for Python dependencies
- Added config.js for unified configuration management
- Added start-services.js for microservices orchestration
- Added env_template.txt for environment variable setup
- Enhanced package.json with comprehensive scripts

🛡️ SECURITY ENHANCEMENTS:
- Rate limiting for authentication and API endpoints
- Security monitoring for suspicious activities
- Input validation and sanitization
- Proper error handling without information leakage
- JWT token management improvements

📈 PERFORMANCE & MONITORING:
- Request perform

--- a/Mini_project - Copy/package.json
+++ b/Mini_project - Copy/package.json
@@ -1,5 +1,36 @@
 {
+  "name": "wavefarer-microservices",
+  "version": "1.0.0",
+  "description": "WaveFarer Beach Safety Prediction System - Microservices Architecture",
+  "scripts": {
+    "start": "node start-services.js start",
+    "stop": "node start-services.js stop",
+    "restart": "node start-services.js restart",
+    "status": "node start-services.js status",
+    "dev": "node start-services.js start",
+    "install-deps": "npm run install-python-deps && npm run install-node-deps",
+    "install-python-deps": "pip install -r requirements.txt",
+    "install-node-deps": "cd backend && npm install",
+    "install-frontend-deps": "cd frontend && npm install",
+    "setup": "npm run install-deps && npm run install-frontend-deps"
+  },
   "dependencies": {
     "pandas": "^0.0.3"
-  }
+  },
+  "devDependencies": {},
+  "engines": {
+    "node": ">=14.0.0",
+    "python": ">=3.8"
+  },
+  "keywords": [
+    "microservices",
+    "flask",
+    "express",
+    "react",
+    "machine-learning",
+    "weather",
+    "beach-safety"
+  ],
+  "author": "WaveFarer Team",
+  "license": "MIT"
 }
